# observatorio

./: CONSTITUCION.md  LAB_NOTEBOOK.md  LICENSE  README.md  pyproject.toml
notebooks/: 001_kaprekar_calendar.ipynb  README.md
observatory/: __init__.py
observatory/analyzers/: __init__.py
observatory/core/: trace.py
observatory/experiments/: __init__.py  kaprekar_experiments.py
observatory/fields/: __init__.py
observatory/null_models/: __init__.py
observatory/transformers/: kaprekar.py
observatory/visualization/: __init__.py
tests/: test_kaprekar.py
