[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observatorio"
version = "0.1.0"
description = "Un laboratorio computacional para el estudio de transformaciones numéricas, campos temporales y anomalías matemáticas."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["kaprekar", "number-theory", "mathematics", "observatory", "numerical-transformations"]
authors = [
  { name = "AionCore01" }
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "jupyter>=1.0",
  "notebook>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["observatory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py310"
